--- a/Airport2/pom.xml
+++ b/Airport2/pom.xml
@@ -17,7 +17,6 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<!-- <junit-jupiter.version>5.2.0</junit-jupiter.version> -->
 	</properties>
 
 	<dependencies>
@@ -29,10 +28,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -59,7 +64,6 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-params</artifactId>
-<!-- 			<version>5.4.2</version> -->
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
