--- a/Airport2/src/main/resources/application.properties
+++ b/Airport2/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://hwsw-db.autsoft.hu:5432/postgres
+spring.datasource.username=vizualnogyj
+spring.datasource.password=rj9p5T
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
