--- a/Airport2/src/main/resources/application.properties
+++ b/Airport2/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://hwsw-db.autsoft.hu:5432/postgres
-spring.datasource.username=vizualnogyj
-spring.datasource.password=rj9p5T
+spring.datasource.username=TODO
+spring.datasource.password=TODO
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
