modify database to hwsw

--- a/Airport2/src/main/resources/application.properties
+++ b/Airport2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://hwsw-db.autsoft.hu:5432/postgres
+spring.datasource.url=jdbc:postgresql://hwsw-db.autsoft.hu:5432/hwsw
 spring.datasource.username=TODO
 spring.datasource.password=TODO
 spring.jpa.hibernate.ddl-auto=update
