--- a/Airport2/src/main/resources/application.properties
+++ b/Airport2/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.datasource.url=jdbc:postgresql://hwsw-db.autsoft.hu:5432/hwsw
 spring.datasource.username=TODO
 spring.datasource.password=TODO
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
+
+logging.level.org.springframework.security=DEBUG
